# pc-control

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: README.md  browser_extract.py  clipboard_timer.py  focus_or_launch.py  screenshot_to_text.py  top_processes.py
pc_control/: __init__.py  __main__.py  cli.py  config.py
pc_control/api/: commands.py  email_client.py  telegram.py  webhooks.py
pc_control/app/: launcher.py
pc_control/audio/: controller.py
pc_control/browser/: commands.py  daemon.py  navigate.py  recorder_daemon.py  recording.py  session.py
pc_control/chat/: commands.py  whatsapp.py  whatsapp_daemon.py
pc_control/desktop/: commands.py  controller.py  daemon.py  inspector.py
pc_control/input/: controller.py
pc_control/ocr/: windows_ocr.py
pc_control/screen/: capture.py  context.py
pc_control/scripts/: ocr_engine.ps1  recorder_inject.js  whatsapp_monitor.js
pc_control/system/: clipboard.py  monitor.py
pc_control/vision/: commands.py  detect.py  diff.py  template.py
pc_control/windows/: layouts.py  manager.py
pc_control/workflow/: engine.py
tests/: test_cli.py  test_imports.py  test_system_clipboard.py  test_system_monitor.py
