[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-control"
version = "0.1.0"
description = "Python CLI toolkit to fully control a Windows PC: screen, input, windows, browser, desktop apps, vision, OCR, messaging, and workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Matias Lara" }]
keywords = [
    "automation",
    "windows",
    "desktop",
    "browser",
    "playwright",
    "ocr",
    "agent",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Operating System",
]

# Core runtime deps — always needed for basic screen/input/windows/system.
dependencies = [
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "pywin32>=305; sys_platform == 'win32'",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
desktop = ["pywinauto>=0.6.8; sys_platform == 'win32'"]
vision = ["numpy>=1.24", "opencv-python>=4.8"]
ocr = ["winsdk>=1.0.0b10; sys_platform == 'win32'"]
all = [
    "playwright>=1.40.0",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.scripts]
pc-control = "pc_control.cli:main"

[project.urls]
Homepage = "https://github.com/Matiasxth/pc-control"
Repository = "https://github.com/Matiasxth/pc-control"
Issues = "https://github.com/Matiasxth/pc-control/issues"

[tool.setuptools.packages.find]
include = ["pc_control*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
pc_control = ["scripts/*.ps1", "scripts/*.js"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # handled by formatter
